--- a/cpai/src/Component/NavBar/index.css
+++ b/cpai/src/Component/NavBar/index.css
@@ -1,25 +1,26 @@
 .container {
     max-width: 80%;
     margin: auto;
+
 }
 
 .logo img {
     width: 125px;
     /* height: 100px; */
 }
-.section1 header{ 
+.section1 nav{ 
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
 }
 
-.section1 header .navlink ul{
+.section1 nav .navlink ul{
     display: flex;
     align-items: center;
 }
 
-.section1 header .navlink li{
+.section1 nav .navlink li{
     margin: 0 20px;
 }
 
@@ -45,8 +46,10 @@
 }
 
 .section1 {
-  position: sticky;
+  position: fixed ;
+  top: 0;
   width: 100%;
+  z-index: 1000;
+  background-color: white;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, .5); /* Adjust the values as needed */
 }
-
