--- a/cpai/src/Component/About/index.css
+++ b/cpai/src/Component/About/index.css
@@ -1,11 +1,8 @@
-.about-section{
-    margin: 200px 0;
-}
+
 
 .about-section{
     max-width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 193.2px auto;
     display: flex;
     justify-content: center;
     align-items: center;
