--- a/cpai/src/Component/About/index.css
+++ b/cpai/src/Component/About/index.css
@@ -1,8 +1,8 @@
 
 
 .about-section{
-    max-width: 70%;
-    margin: 193.2px auto;
+    max-width: 60%;
+    margin: 193.2px auto 145px auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,4 +11,5 @@
 
 .about-section > *{
     margin-bottom: 20px;
+    line-height: 2.1; /* Adjust the line-height value as needed */
 }
