--- a/cpai/src/Component/HomePage/index.css
+++ b/cpai/src/Component/HomePage/index.css
@@ -73,9 +73,10 @@
 .section3 li {
   flex: 0 0 calc(33.33% - 20px); /* Three items in a row initially with some margin */
   width: calc(33.33% - 20px);
-  margin: 10px;
+  margin: 10px 10px 20px 10px;
   text-align: center;
   box-sizing: border-box;
+  line-height: 1.5;
 }
 
 .section3 li img {
@@ -212,6 +213,7 @@
   margin: 10px;
   text-align: center;
   box-sizing: border-box;
+  line-height: 1.5;
 }
 
 .physician-section li img {
