--- a/cpai/src/Component/DoctorPage/index.css
+++ b/cpai/src/Component/DoctorPage/index.css
@@ -1,31 +1,29 @@
-.doctor-page {
-  margin: 150px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+/* Common styles for all screen sizes */
 
-.doctor-page-banner img {
-  max-width: 100%;
-  width: 1350px;
-  max-height: 300px; /* Adjust as needed */
-  /* object-fit: cover; */
+.doctor-page {
+  margin: 170px 0 120px 0;
 }
 
 .doctor-info {
-  margin-top: 20px; /* Adjust as needed */
-  text-align: center;
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+  margin: 40px auto 0 auto;
+}
+
+.doctor-text {
+  padding: 20px; /* Adjust padding as needed */
+}
+
+.doctor-image {
+  width: 100%; /* Adjust width as needed */
+  max-width: 300px; /* Set a maximum width */
+  height: auto; /* Maintain aspect ratio */
 }
 
 .doctor-info h2 {
   font-size: 24px;
   margin-bottom: 10px;
-}
-
-.doctor-info img {
-  width: 200px; /* Adjust as needed */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 50%; /* Make it a circular image */
 }
 
 .doctor-info p {
@@ -43,3 +41,5 @@
   font-size: 14px;
   margin-bottom: 5px;
 }
+
+
