--- a/cpai/src/index.css
+++ b/cpai/src/index.css
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
+  letter-spacing: .5px;
 }
 
 code {
