--- a/cpai/src/Component/Physicians/index.css
+++ b/cpai/src/Component/Physicians/index.css
@@ -6,6 +6,15 @@
     align-items: center;
 }
 
+.dark .physician-section2 {
+  margin: 150px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
 .physician-section2 h2{
     font-size: 45px;
     font-weight: 800;
