--- a/cpai/src/Component/Services/index.css
+++ b/cpai/src/Component/Services/index.css
@@ -6,6 +6,15 @@
     align-items: center;
 }
 
+.dark .service-section {
+  padding: 175px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
 .service-section h1{
     font-size: 45px;
     font-weight: 800;
