added margin to left of dark mode toggle button

--- a/cpai/src/Component/DarkModeToggle/DarkModeToggle.css
+++ b/cpai/src/Component/DarkModeToggle/DarkModeToggle.css
@@ -16,6 +16,8 @@ video {
     position: relative;
     width: 60px;
     height: 34px;
+    margin-left: 20px;
+    /* Add space on the left */
 }
 
 .dark-mode-toggle button {
