fixed some stuff

--- a/cpai/src/Component/HomePage/index.css
+++ b/cpai/src/Component/HomePage/index.css
@@ -130,6 +130,12 @@
   color: #dddada;
   /* Set the color of the description */
 }
+a{
+  color: black;
+}
+.dark a{
+  color: white  ;
+}
 
 @media (max-width: 1200px) {
   .section3 li {
