--- a/cpai/src/Component/About/index.css
+++ b/cpai/src/Component/About/index.css
@@ -2,7 +2,7 @@
 
 .about-section{
     max-width: 60%;
-    margin: 175px auto 1px auto;
+    margin: 100px auto 1px auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,6 +25,11 @@
 }
 
 .about-section h1{
-    font-size: 45;
+    font-size: 45px;
     font-weight: 800;
 }
+
+/* .about-us-header{
+    font-size: 45;
+    font-weight: 800;
+} */
