--- a/cpai/src/Component/HomePage/index.css
+++ b/cpai/src/Component/HomePage/index.css
@@ -187,7 +187,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 100px 0;
+    margin: 50px 0;
 }
 
 .contact-section > * {
@@ -340,11 +340,11 @@ a{
 
 
 .dark .show-more-link {
-  color: blue;
-  text-decoration: underline;
+  color: white;
+  /* text-decoration: underline; */
 }
 
 .show-more-link {
-  color: blue;
-  text-decoration: underline;
+  color: black;
+  /* text-decoration: underline; */
 }
