--- a/cpai/src/Component/NavBar/index.css
+++ b/cpai/src/Component/NavBar/index.css
@@ -81,4 +81,5 @@
   z-index: 1000;
   background-color: #0b003a;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, .5); /* Adjust the values as needed */
+  transition: background-color .5s ease;
 }
