--- a/cpai/src/Component/HomePage/index.css
+++ b/cpai/src/Component/HomePage/index.css
@@ -1,5 +1,6 @@
-
-
+.home {
+  transition: background-color 0.5s ease;
+}
 .section2 {
   max-width: 100%;
   width: 100%;
@@ -37,7 +38,7 @@
   display: block;
   overflow: hidden;
   position: relative;
-      /* Ensure position relative is set */
+  /* Ensure position relative is set */
 }
 
 .section2 img {
@@ -80,29 +81,29 @@
 /* Section 3 - Services */
 
 .dark .section3 {
-    background-color: #333;
-      color: white;
-      margin: 50px 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+  color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.5s ease;
 }
 
-.section3{
-    margin: 50px 0 ;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgb(244, 244, 244); */
-
+.section3 {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgb(244, 244, 244); */
+  transition: background-color 0.5s ease;
 }
 
-.section3 h2{
-    font-size: 45px;
-    font-weight: 800;
-    padding: 50px 0;
+.section3 h2 {
+  font-size: 45px;
+  font-weight: 800;
+  padding: 50px 0;
 }
 
 .section3 ul {
@@ -150,11 +151,11 @@
   color: #dddada;
   /* Set the color of the description */
 }
-a{
+a {
   color: black;
 }
-.dark a{
-  color: white  ;
+.dark a {
+  color: white;
 }
 
 @media (max-width: 1200px) {
@@ -174,30 +175,29 @@ a{
 /* Section 4 */
 
 .dark .contact-section {
-    display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin: 100px 0;
-  background-color: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0;
   color: white;
 }
 
 .contact-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0;
 }
 
 .contact-section > * {
   margin-bottom: 30px;
-}   
+}
 
-.contact-section h2{
-    font-size: 45px;
-    font-weight: 800;
+.contact-section h2 {
+  font-size: 45px;
+  font-weight: 800;
 }
 
 .contact-details {
@@ -255,12 +255,12 @@ a{
 
 /* Section 5 */
 
-.physician-section{
-    margin: 50px 0 ;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.physician-section {
+  margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .dark .physician-section {
@@ -269,14 +269,13 @@ a{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #333;
   color: white;
 }
 
-.physician-section h2{
-    font-size: 45px;
-    font-weight: 800;
-    padding: 50px 0;
+.physician-section h2 {
+  font-size: 45px;
+  font-weight: 800;
+  padding: 50px 0;
 }
 
 .physician-section ul {
@@ -338,7 +337,6 @@ a{
     width: calc(100% - 20px);
   }
 }
-
 
 .dark .show-more-link {
   color: white;
