--- a/cpai/src/index.css
+++ b/cpai/src/index.css
@@ -13,6 +13,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
   letter-spacing: .5px;
+  transition: background-color .5s ease;
 }
 
 body.dark {
@@ -25,6 +26,7 @@ body.dark {
   letter-spacing: .5px;
   background-color: #333;
   color: white;
+  transition: background-color .5s ease;
 }
 
 body.dark a {
